# core

./: AUTHORS  CMakeLists.txt  Make.config  Makefile  README
builds/: Makefile
cmake/modules/: FindCORE.cmake  FindGMP.cmake  FindGMPXX.cmake  FindMPFR.cmake
doc/: Makefile  README  bigNumFormat.txt  eclipse.txt  stackOverflow.txt
doc/announce/: ANNOUNCEMENT_1.2  ANNOUNCEMENT_1.2.1  ANNOUNCEMENT_1.2.2  ANNOUNCEMENT_1.3  ANNOUNCEMENT_1.4  ANNOUNCEMENT_1.5  ANNOUNCEMENT_1.6  ANNOUNCEMENT_1.7
doc/doxy/: Makefile  doxygen.cfg  io_format.txt  main.txt
doc/tutorial/: Makefile  appendix.tex  appendix_b.tex  appendix_c.tex  history.tex  macro.tex  tutorial.bib  tutorial.tex
ext/: geometry2d.cpp  linearAlgebra.cpp
ext/geom2d/: point2d.cpp
ext/graphics/: Makefile  README  drawCurve.cpp
inc/: CORE.h
inc/CORE/: BigFloat.h  BigFloat.inl  BigFloat2.h  BigInt.h  BigRat.h  CORE.h  Config.h  CoreAux.h  CoreDefs.h  CoreIO.h  Expr.h  ExprRep.h  Filters.h  Gmpq.h  IntervalT.h  RootBounds.h  SupportT.h  TODO  Timer.h  Wrappers.h  geometry2d.h  geometry3d.h  linearAlgebra.h
progs/: FAQs  Make.rules  README
progs/chull/: Makefile  chull.cpp  chull4.cpp
progs/complex/: Makefile  README  tComplex.cpp
progs/curves/: Makefile  localCurves.h  plotCurve.cpp  tCurves.cpp  tIntersect.cpp  tt.cpp
progs/data/: README
progs/delaunay/: dt2.cpp
progs/demos/: Makefile
progs/gaussian/: Makefile  pivotgaussian.cpp
progs/geom3d/: Makefile  README
progs/mesh/: Make.options  README
progs/nestedSqrt/: README
progs/pi/: newPi.cpp
progs/poly/: Makefile  parsepoly.cpp  tDescartes.cpp  tPoly.cpp  tSturm.cpp
progs/radical/: tRadical.cpp
progs/rootIsol/: Descartes.h  IntervalIsol.h  Makefile  lowerBounds.h  readpoly.h  tDescartes.cpp  testSturm.cpp
progs/testIO/: testCompatibleNew.cpp
progs/testIdent/: Makefile
progs/tests/: Makefile  README  bench.cpp
src/: CoreDefs.cpp  CoreIo.cpp  MpfrIO.cpp
tmp/: README
(+53 files in other folders)
